--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,7 @@
 AUTHORS / CONTRIBUTORS (alphabetic order):
 
  * Cowles, Matthew Dixon -- ftp://ftp.visi.com/users/mdc/ping.py
+ * Socketubs -- http://socketubs.net
  * Diemer, Jens -- http://www.jensdiemer.de
  * Falatic, Martin -- http://www.falatic.com
  * Hallman, Chris -- http://cdhallman.blogspot.com  
