--- a/AUTHORS
+++ b/AUTHORS
@@ -1,7 +1,6 @@
-AUTHORS / CONTRIBUTORS (alphabetic order):
+AUTHORS / CONTRIBUTORS:
 
- * Cowles, Matthew Dixon -- ftp://ftp.visi.com/users/mdc/ping.py
- * Geoffrey, Lehée -- http://socketubs.net
+ * Cowles, Matthew Dixon
  * Diemer, Jens -- http://www.jensdiemer.de
  * Falatic, Martin -- http://www.falatic.com
  * Hallman, Chris -- http://cdhallman.blogspot.com  
@@ -13,3 +12,4 @@ AUTHORS / CONTRIBUTORS (alphabetic order):
  * Stauffer, Samuel
  * Zach Ware 
  * zed -- https://github.com/zed
+ * Geoffrey, Lehée -- http://socketubs.net
